# FloatPointingConstantAnalyser

./: CMakeLists.txt  main.cpp
.PVS-Studio/: depend_info.json
Scanner/: Scanner.cpp  Scanner.h
Scanner/Context/: ScannerContext.h
Scanner/State/: ScannerState.h  StateS1.cpp  StateS1.h  StateS2.cpp  StateS2.h  StateS3.cpp  StateS3.h  StateS4.cpp  StateS4.h  StateS5.cpp  StateS5.h  StateS6.cpp  StateS6.h  StateS7.cpp  StateS7.h  StateS8.cpp  StateS8.h
